# KappaProfiler

./: .gitignore  README.md  TODO.md  setup.cfg
.github/readme_scripts/: async.py  async_multiprocess.py  contextmanagers.py  decorators.py  get_node.py  multi_start_stop.py
.github/scripts/: publish_to.py  update_version.py
.github/workflows/: publish.yaml
kappaprofiler/: TODO.py  __init__.py  node.py  print_elapsed.py  profiler.py  root_node.py  stopwatch.py  time_node.py  time_provider.py
tests_unit/: test_init.py  test_profiler.py  test_raise_exception.py  test_stopwatch.py  test_time_node.py
tests_util/: mock_time_provider.py
